--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -5,19 +6,29 @@
     <title>About Me</title>
 </head>
 <body>
-    <h1>JEAN CLAUDE MUHIRE</h1>
-    <Hr>
-    <h2>My Hobbies</h2>
-    <ul>
-        <li>Songs</li>
-        <li>Soccer</li>
-        <li>Tourism</li>
-    </ul>
-    <h2>My Goals for 2025</h2>
-    <ol>
-        <li>Acquiring a new skill and learn quickly</li>
-        <li>Improve self-awareness and work-life balance</li>
-        <li>Be happy in every situation</li>
-    </ol>
+    <header>
+        <h1>JEAN CLAUDE MUHIRE</h1>
+        <hr>
+    </header>
+    
+    <main>
+        <section>
+            <h2>My Hobbies</h2>
+            <ul>
+                <li>Listening to music</li>
+                <li>Playing soccer</li>
+                <li>Traveling & tourism</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>My Goals for 2025</h2>
+            <ol>
+                <li>Acquire a new skill and learn quickly</li>
+                <li>Improve self-awareness and work-life balance</li>
+                <li>Be happy in every situation</li>
+            </ol>
+        </section>
+    </main>
 </body>
 </html>
