--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <hr>
     <h2>My Hobbies</h2>
     <ul>
-        
+        <li>Reading books</li>
+        <li>Watching soccer</li>
+        <li>Volunteering</li>
     </ul>
 </body>
 </html>
