Added ordered list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </ul>
     <h2>My Goals for 2025</h2>
     <ol>
-        
+        <li>Becoming a Full Stack Web Developer</li>
+        <li>Paying off all my debts</li>
+        <li>Good in managing stress</li>
     </ol>
 </body>
 </html>
