--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ol>
         <li>Becoming a Full Stack Web Developer</li>
         <li>Paying off all my debts</li>
-        <li>Good in managing stress</li>
+        <li>Good in managing stress to have a better life</li>
     </ol>
 </body>
 </html>
